
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-11-01 b3rs3rk
	Chg: Revamp categorySearch for cleanliness and make category determination more reliable and extensible
2016-11-01 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.6.0


2016-10-31 b3rs3rk
	Chg: Replace duplicate categorySearch function in releases and exclude leading -99 improving
		query speed.
2016-10-30 niel
	Mrg: DariusIII's branch to switch ReleaseImages class to using Imigemagick instead of GD, to
		reduce (hopefully remove) segfaults during image creation.
2016-10-28 DariusIII
	Mrg: Fix speed and count accuracy issues with API/Browse functions PR #2303
2016-10-25 niel
	Mrg: Bring in b3s3rk's Imagick changes that fix segfaults during PostProcessingAdditional.
	Chg: Add the Imagick PHP extension as a required dependency.
2016-10-24 DariusIII
	Add: Search for releases by poster by clicking on poster name in releases details page.
2016-10-22 niel
	Fix: Amazon settings not having full section included.
	Fix: Validating site-edit updates now uses the DB class until such time as the template can
		be rewritten to make use of Settings class (Partially fixes issue #2300).
2016-10-21 niel
	Mrg: Brought in dev-move-to-settings-model branch. This is expected to cause problems as we
		iron out the final wrinkles. Indexing side should mostly be fine as it was previously
		merged some time ago. The web side is where we expect most problems to occur. Please keep
		an eye on your logs and let us know of *any* problems showing up.
	Fix: Correct typo causing maxmusicprocessed setting lookup to fail.
	Fix: Add sql patch to ensure the indexer, ppa, innerfileblacklist setting exists.
2016-10-21 DariusIII