@@ -9,6 +9,8 @@ NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
 
+2016-11-02 DariusIII
+	Fix: Broken logic in XML_Response class that lead to high response times
 2016-11-01 b3rs3rk
 	Chg: Revamp categorySearch for cleanliness and make category determination more reliable and extensible
 2016-11-01 niel
